# BooleanSatisfiability

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  data_utils.py  example_run.py  example_solver.py  model.py  pyproject.toml  solver.py  train.py
.github/workflows/: test.yml
benchmark/: BENCHMARK_REPORT.md  README.md  analyze_results.py  audit_upstream.py  benchmark.py
benchmark/results/: benchmark_runs.csv  benchmark_summary.csv  paired_differences.csv  run_metadata.json  upstream_audit.json
benchmark/tests/: test_benchmark.py
docs/: architecture.md  results-methodology.md
examples/: README.md  pigeonhole_3_2.cnf  satisfiable.cnf  unsatisfiable.cnf
legacy/: README.md
legacy/original/: formula_utils.py  model.py
satrl/: __init__.py  baselines.py  benchmarking.py  cli.py  dimacs.py  formula.py  generator.py  solver.py
tests/: test_cli.py  test_dimacs.py  test_formula.py  test_properties.py  test_solver.py
