[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satrl-exact"
version = "0.1.0"
description = "A deterministic exact DPLL solver and reproducible SAT experiment toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Mahesh Karthikeyan"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
satrl = "satrl.cli:main"

[tool.setuptools.packages.find]
include = ["satrl*"]

[tool.setuptools]
include-package-data = false
